<resources>
    <string name="app_name">GIS工具箱</string>
    <string name="view_location_callout">%1$.6f°%2$s\n%3$.6f°%4$s</string>
    <string name="track_notification_message">用时%1$s，总长度%2$.0f米</string>
    <string name="track_notification_title_running">正在记录轨迹</string>
    <string name="track_notification_title_pausing">暂停记录轨迹</string>
    <string name="import_btn_ftp">打开FTP</string>
    <string name="import_btn_search">自动搜索</string>
    <string name="file_btn_up">返回上级</string>
    <string name="layer_btn_open">打开</string>
    <string name="layer_btn_save">保存</string>
    <string name="layer_btn_save_as">另存为</string>
    <string name="main_img_map_compass">地图指南针</string>
    <string name="main_img_compass">指南针</string>
    <string name="main_btn_zoom_in">放大</string>
    <string name="main_btn_zoom_out">缩小</string>
    <string name="main_btn_layer">图层</string>
    <string name="main_btn_reset_map">重置</string>
    <string name="main_btn_import">导入</string>
    <string name="main_btn_table">属性表</string>
    <string name="main_btn_edit">编辑</string>
    <string name="main_btn_track">轨迹</string>
    <string name="main_btn_zoom_to_layer">缩放到图层</string>
    <string name="main_btn_zoom_to_default">缩放到默认</string>
    <string name="main_btn_pan">定位</string>
    <string name="main_img_satellite">正在记录轨迹</string>
    <string name="domain_tvw_min_value">最小值：</string>
    <string name="domain_tvw_max_value">最大值：</string>
    <string name="domain_tvw_allowed_content">允许输入的内容：</string>
    <string name="domain_btn_save">保存</string>
    <string name="domain_btn_close">关闭</string>
    <string name="edit_btn_draw">画图</string>
    <string name="edit_btn_edit">编辑</string>
    <string name="edit_btn_split">分割</string>
    <string name="edit_btn_union">合并</string>
    <string name="edit_btn_delete">删除</string>
    <string name="edit_btn_clear_selection">取消</string>
    <string name="edit_tbtn_single_select">单选</string>
    <string name="edit_tbtn_multi_select">多选</string>
    <string name="edit_btn_undo">撤销</string>
    <string name="edit_btn_redo">重做</string>
    <string name="attri_table_btn_edit">编辑</string>
    <string name="attri_table_btn_close">关闭</string>
    <string name="layer_btn_to_up">▲</string>
    <string name="layer_btn_to_down">▼</string>
    <string name="layer_btn_menu">设置</string>
    <string name="layer_btn_delete">删除</string>
    <string name="menu_map">地图</string>
    <string name="menu_rotate">地图旋转</string>
    <string name="menu_location_display">位置显示</string>
    <string name="menu_center_when_recording">记录轨迹时自动置中</string>
    <string name="menu_keep_location_display_background">后台保持定位</string>
    <string name="menu_feature_layer_query_extent_every_time">矢量图层重算范围</string>
    <string name="menu_show_location_display">显示定位</string>
    <string name="menu_base_layer">底图设置</string>
    <string name="menu_default_scale">默认比例尺</string>
    <string name="menu_gps_min_time">GPS最小更新时间</string>
    <string name="menu_load_esri_map">加载Esri底图</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_side_button_right">在右侧显示按钮</string>
    <string name="menu_ui">界面</string>
    <string name="menu_use_tiled_base_layer">使用瓦片底图</string>
    <string name="attri_table_area"><![CDATA[<b>面积：</b>%1$.2f ㎡<br><b>周长：</b>%2$.2f m]]></string>
    <string name="attri_table_length"><b>长度：</b>%1$.2fm</string>
    <string name="menu_gps_min_distance">GPS最短更新距离</string>
    <string name="menu_create_feature_layer">创建矢量图层</string>
    <string name="menu_compass">显示地图指北针</string>
    <string name="menu_use_barometer">优先使用气压计高度</string>
    <string name="menu_use_relative_altitude">使用相对气压高度</string>
    <string name="msg_gps_detail">
<![CDATA[<b>时间：</b>%1$s<br>
<b>点数：</b>%2$d<br>
<b>里程：</b>%3$.0fm<br>
<b>经度：</b>%4$.6f<br>
<b>纬度：</b>%5$.6f<br>
<b>海拔：</b>%6$.0f/%7$.0f m (GPS/BARO)<br>
<b>速度：</b>%8$.2f m/s&nbsp;&nbsp;%9$.2f km/h<br>
<b>方向：</b>%10$.0f°&nbsp;&nbsp;%11$s<br>
<b>精度：</b>%12$.1f/%13$.1f/%14$.1f m (H/V/S)<br>
<b>卫星：</b>%15$d / %16$d
]]>
    </string>
    <string name="msg_gps_detail_bar">
<![CDATA[<b>状态：</b>%1$s&nbsp;&nbsp;%2$.0fm<br>
<b>位置：</b>%3$.4f&nbsp;&nbsp;%4$.4f&nbsp;&nbsp;%5$.0f m<br>
<b>速度：</b>%6$.2fm/s&nbsp;&nbsp;%7$.2fkm/h&nbsp;&nbsp;%8$.0f°&nbsp;(%9$s)]]>
    </string>
    <string name="scale_large">1:%1$.0f</string>
    <string name="scale_small">1:%1$.2f万</string>
    <string name="base_btn_add">添加</string>
    <string name="base_btn_browse">浏览</string>
    <string name="main_btn_menu">设置菜单</string>
    <string name="base_btn_esri">预设底图</string>
    <string name="main_tvw_draw_ok">完成</string>
    <string name="main_tvw_draw_cancel">取消</string>
    <string name="main_track_recording"><b>正在记录轨迹</b></string>
    <string name="main_track_recording_paused"><b>暂停记录轨迹</b></string>
    <string name="menu_reset">重新加载地图</string>
    <string name="menu_measure">测量</string>
    <string name="menu_measure_area">测量面积</string>
    <string name="menu_measure_length">测量长度</string>
    <string name="measure_length_value">%1$.2f m</string>
    <string name="measure_area_value">面积%1$.0f ㎡&#160;&#160;周长%2$.0f m</string>
    <string name="btn_open_ftp">打开FTP</string>
    <string name="btn_close_ftp">关闭FTP</string>
    <string name="menu_track">轨迹</string>
    <string name="menu_use_gps_data_source">使用自定义GPS位置数据源</string>
    <string name="menu_gps_data_source_min_fixed_satellite_count">最少可信卫星数量</string>
    <string name="menu_resume">恢复</string>
    <string name="menu_pause">暂停</string>
    <string name="menu_stop">停止</string>
    <string name="menu_screen_on">屏幕常亮</string>
    <string name="menu_navigation_point_height_factor">导航模式图标位置</string>
    <string name="shortcut_start_track">开始记录轨迹</string>
</resources>
