<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:orientation="vertical"
    android:touchscreenBlocksFocus="true"
    tools:context="com.autod.gis.ui.activity.MainActivity">


    <com.esri.arcgisruntime.mapping.view.MapView
        android:id="@+id/main_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_llt_top"
        android:layout_marginTop="-72dp"
        android:layout_marginBottom="-24dp" />

    <LinearLayout
        android:id="@+id/main_llt_top"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingBottom="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_height="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/main_track_recording"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/main_tvw_track_info" />
    </LinearLayout>


    <ImageView
        android:id="@+id/main_img_map_compass"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginStart="12dp"
        android:layout_below="@id/main_llt_top"
        android:rotation="-45"
        android:src="@drawable/ic_map_compass"

        android:contentDescription="@string/main_img_map_compass" />


    <LinearLayout
        android:id="@+id/main_llt_side_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:translationY="64dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/main_btn_zoom_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_side_zoom_in"
            android:contentDescription="@string/main_btn_zoom_in" />

        <ImageButton
            android:id="@+id/main_btn_zoom_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_side_zoom_out"
            android:contentDescription="@string/main_btn_zoom_out" />

        <ImageButton
            android:id="@+id/main_btn_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_side_layer"
            android:contentDescription="@string/main_btn_layer" />


    </LinearLayout>


    <TextView
        android:id="@+id/main_tvw_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="64dp"
        android:textColor="#FFFFFF" />

    <fragment
        android:id="@+id/main_fgm_edit"
        android:name="com.autod.gis.ui.fragment.EditFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-48dp"
        android:layout_alignParentBottom="true" />

    <fragment
        android:id="@+id/main_fgm_attri"
        android:name="com.autod.gis.ui.fragment.FeatureAttributionTableFragment"
        android:layout_width="348dp"
        android:layout_marginStart="-348dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp" />


    <LinearLayout
        android:id="@+id/main_llt_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#d6d7d7"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/main_btn_import"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bottom_import"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_import" />


        <ImageButton
            android:id="@+id/main_btn_table"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bottom_table"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_table" />


        <ImageButton
            android:id="@+id/main_btn_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bottom_edit"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_edit" />

        <ImageButton
            android:id="@+id/main_btn_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_bottom_menu"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_menu" />

        <ImageButton
            android:id="@+id/main_btn_track"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bottom_track"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_track" />

        <ImageButton
            android:id="@+id/main_btn_zoom_to_layer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bottom_full_screen"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_zoom_to_layer" />


        <ImageButton
            android:id="@+id/main_btn_pan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bottom_location"
            style="@style/bottom_button"
            android:contentDescription="@string/main_btn_pan" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_llt_draw_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#323232"
        android:layout_marginBottom="-48dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@android:color/white"
            android:layout_toStartOf="@id/main_tvw_draw_cancel"
            android:id="@+id/main_tvw_draw" />

        <TextView
            android:id="@+id/main_tvw_draw_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:focusable="true"
            android:clickable="true"
            android:textColor="@color/draw_bar_btn_color"
            android:text="@string/main_tvw_draw_ok" />

        <TextView
            android:id="@+id/main_tvw_draw_cancel"
            android:layout_toStartOf="@id/main_tvw_draw_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="24dp"
            android:focusable="true"
            android:clickable="true"
            android:textColor="@color/draw_bar_btn_color"
            android:text="@string/main_tvw_draw_cancel" />

    </RelativeLayout>
</RelativeLayout>