<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="12dp"
    android:orientation="vertical"
    tools:context="com.autod.gis.ui.activity.BaseLayerListActivity">

    <ListView
        android:id="@+id/base_lvw_layers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginBottom="48dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/base_btn_add"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/base_btn_add" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/base_btn_browse"
            style="@style/normal_button"
            android:text="@string/base_btn_browse"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/base_btn_esri"
            style="@style/normal_button"
            android:text="@string/base_btn_esri"/>

    </LinearLayout>

</RelativeLayout>