<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.autod.gis.ui.activity.LayerListActivity">

    <ListView
        android:id="@+id/layer_lvw_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:layout_marginBottom="48dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:layout_alignParentBottom="true">

        <!--<Button-->
            <!--android:id="@+id/btnResetLayers"-->
            <!--style="@style/normalButton"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="重置" />      -->
        <Button
            android:id="@+id/layer_btn_open"
            style="@style/normal_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/layer_btn_open" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layer_btn_save"
            style="@style/normal_button"
            android:text="@string/layer_btn_save"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layer_btn_save_as"
            style="@style/normal_button"
            android:text="@string/layer_btn_save_as"/>
    </LinearLayout>
</RelativeLayout>