<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/layer_btn_to_up"
            android:layout_width="36dp"
            android:layout_height="28dp"
            android:padding="0dp"
            android:text="@string/layer_btn_to_up" />

        <Button
            android:id="@+id/layer_btn_to_down"
            android:layout_width="36dp"
            android:layout_height="28dp"
            android:padding="0dp"
            android:text="@string/layer_btn_to_down" />
    </LinearLayout>

    <RadioButton
        android:id="@+id/layer_rbtn_current_layer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="96dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/layer_tvw_file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/layer_tvw_opacity"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/layer_skb_opacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/layer_tvw_opacity"
                android:max="100" />

        </RelativeLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/layer_chk_visible"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="64dp" />

    <ImageButton
        android:id="@+id/layer_btn_menu"
        style="@style/normal_button"
        android:layout_width="48dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/layer_btn_delete"
        android:padding="12dp"
        android:src="@drawable/ic_draw_delete" />
</RelativeLayout>
